--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,181 @@ examples/img/*
 # developer environments
 .idea
 .vscode
+.coveragerc
+.github/ISSUE_TEMPLATE/a--tensorflow-backend-users.md
+.github/ISSUE_TEMPLATE/b--theano-backend-users.md
+.github/ISSUE_TEMPLATE/c--cntk-backend-users.md
+.github/ISSUE_TEMPLATE/d--keras-preprocessing-users.md
+.github/ISSUE_TEMPLATE/e--keras-applications-users.md
+.github/PULL_REQUEST_TEMPLATE/a--bug-fix.md
+.github/PULL_REQUEST_TEMPLATE/b--new-feature.md
+.github/stale.yml
+.travis.yml
+.travis/install_cntk.sh
+CONTRIBUTING.md
+docker/Dockerfile
+docker/Makefile
+docker/README.md
+docker/theanorc
+ISSUE_TEMPLATE.md
+keras/__init__.py
+keras/activations.py
+keras/applications/__init__.py
+keras/applications/densenet.py
+keras/applications/imagenet_utils.py
+keras/applications/inception_resnet_v2.py
+keras/applications/inception_v3.py
+keras/applications/mobilenet.py
+keras/applications/mobilenet_v2.py
+keras/applications/nasnet.py
+keras/applications/resnet.py
+keras/applications/resnet50.py
+keras/applications/resnet_v2.py
+keras/applications/vgg16.py
+keras/applications/vgg19.py
+keras/applications/xception.py
+keras/backend/__init__.py
+keras/backend/cntk_backend.py
+keras/backend/common.py
+keras/backend/load_backend.py
+keras/backend/numpy_backend.py
+keras/backend/tensorflow_backend.py
+keras/backend/theano_backend.py
+keras/callbacks/__init__.py
+keras/callbacks/callbacks.py
+keras/callbacks/tensorboard_v1.py
+keras/callbacks/tensorboard_v2.py
+keras/constraints.py
+keras/datasets/__init__.py
+keras/datasets/boston_housing.py
+keras/datasets/cifar.py
+keras/datasets/cifar10.py
+keras/datasets/cifar100.py
+keras/datasets/fashion_mnist.py
+keras/datasets/imdb.py
+keras/datasets/mnist.py
+keras/datasets/reuters.py
+keras/engine/__init__.py
+keras/engine/base_layer.py
+keras/engine/input_layer.py
+keras/engine/network.py
+keras/engine/saving.py
+keras/engine/sequential.py
+keras/engine/topology.py
+keras/engine/training.py
+keras/engine/training_arrays.py
+keras/engine/training_generator.py
+keras/engine/training_utils.py
+keras/initializers.py
+keras/layers/__init__.py
+keras/layers/advanced_activations.py
+keras/layers/convolutional.py
+keras/layers/convolutional_recurrent.py
+keras/layers/core.py
+keras/layers/cudnn_recurrent.py
+keras/layers/embeddings.py
+keras/layers/local.py
+keras/layers/merge.py
+keras/layers/noise.py
+keras/layers/normalization.py
+keras/layers/pooling.py
+keras/layers/recurrent.py
+keras/layers/wrappers.py
+keras/legacy/__init__.py
+keras/legacy/interfaces.py
+keras/legacy/layers.py
+keras/losses.py
+keras/metrics.py
+keras/models.py
+keras/objectives.py
+keras/optimizers.py
+keras/preprocessing/__init__.py
+keras/preprocessing/image.py
+keras/preprocessing/sequence.py
+keras/preprocessing/text.py
+keras/regularizers.py
+keras/utils/__init__.py
+keras/utils/conv_utils.py
+keras/utils/data_utils.py
+keras/utils/generic_utils.py
+keras/utils/io_utils.py
+keras/utils/layer_utils.py
+keras/utils/losses_utils.py
+keras/utils/metrics_utils.py
+keras/utils/multi_gpu_utils.py
+keras/utils/np_utils.py
+keras/utils/test_utils.py
+keras/utils/vis_utils.py
+keras/wrappers/__init__.py
+keras/wrappers/scikit_learn.py
+LICENSE
+MANIFEST.in
+PULL_REQUEST_TEMPLATE.md
+pytest.ini
+setup.cfg
+setup.py
+tests/conftest.py
+tests/docs/test_doc_auto_generation.py
+tests/docs/test_documentation.py
+tests/integration_tests/applications_test.py
+tests/integration_tests/imagenet_utils_test.py
+tests/integration_tests/preprocessing/image_test.py
+tests/integration_tests/preprocessing/sequence_test.py
+tests/integration_tests/preprocessing/text_test.py
+tests/integration_tests/test_datasets.py
+tests/integration_tests/test_image_data_tasks.py
+tests/integration_tests/test_temporal_data_tasks.py
+tests/integration_tests/test_tensorflow_integration.py
+tests/integration_tests/test_vector_data_tasks.py
+tests/keras/activations_test.py
+tests/keras/backend/backend_test.py
+tests/keras/callbacks/callbacks_test.py
+tests/keras/callbacks/tensorboard_test.py
+tests/keras/constraints_test.py
+tests/keras/datasets/datasets_test.py
+tests/keras/engine/layer_subclassing_tests.py
+tests/keras/engine/test_topology.py
+tests/keras/engine/test_training.py
+tests/keras/initializers_test.py
+tests/keras/layers/advanced_activations_test.py
+tests/keras/layers/convolutional_recurrent_test.py
+tests/keras/layers/convolutional_test.py
+tests/keras/layers/core_test.py
+tests/keras/layers/cudnn_recurrent_test.py
+tests/keras/layers/embeddings_test.py
+tests/keras/layers/local_test.py
+tests/keras/layers/merge_test.py
+tests/keras/layers/noise_test.py
+tests/keras/layers/normalization_test.py
+tests/keras/layers/pooling_test.py
+tests/keras/layers/recurrent_test.py
+tests/keras/layers/wrappers_test.py
+tests/keras/legacy/conftest.py
+tests/keras/legacy/interface_test.py
+tests/keras/legacy/layers_test.py
+tests/keras/losses_test.py
+tests/keras/metrics_confusion_matrix_test.py
+tests/keras/metrics_correctness_test.py
+tests/keras/metrics_functional_test.py
+tests/keras/metrics_test.py
+tests/keras/metrics_training_test.py
+tests/keras/optimizers_test.py
+tests/keras/regularizers_test.py
+tests/keras/test_sequential_model.py
+tests/keras/utils/conv_utils_test.py
+tests/keras/utils/data_utils_test.py
+tests/keras/utils/generic_utils_test.py
+tests/keras/utils/io_utils_test.py
+tests/keras/utils/layer_utils_test.py
+tests/keras/utils/multi_gpu_test.py
+tests/keras/utils/np_utils_test.py
+tests/keras/utils/vis_utils_test.py
+tests/keras/wrappers/scikit_learn_test.py
+tests/test_api.py
+tests/test_dynamic_trainability.py
+tests/test_loss_masking.py
+tests/test_loss_weighting.py
+tests/test_model_pickling.py
+tests/test_model_saving.py
+tests/test_multiprocessing.py
+update_api.py
