--- a/.gitignore
+++ b/.gitignore
@@ -210,3 +210,48 @@ tests/test_model_pickling.py
 tests/test_model_saving.py
 tests/test_multiprocessing.py
 update_api.py
+docs/__init__.py
+docs/autogen.py
+docs/mkdocs.yml
+docs/README.md
+docs/structure.py
+docs/templates/activations.md
+docs/templates/applications.md
+docs/templates/backend.md
+docs/templates/callbacks.md
+docs/templates/constraints.md
+docs/templates/datasets.md
+docs/templates/getting-started/faq.md
+docs/templates/getting-started/functional-api-guide.md
+docs/templates/getting-started/sequential-model-guide.md
+docs/templates/index.md
+docs/templates/initializers.md
+docs/templates/layers/about-keras-layers.md
+docs/templates/layers/writing-your-own-keras-layers.md
+docs/templates/losses.md
+docs/templates/metrics.md
+docs/templates/models/about-keras-models.md
+docs/templates/models/model.md
+docs/templates/models/sequential.md
+docs/templates/optimizers.md
+docs/templates/preprocessing/image.md
+docs/templates/preprocessing/text.md
+docs/templates/regularizers.md
+docs/templates/scikit-learn-api.md
+docs/templates/visualization.md
+docs/templates/why-use-keras.md
+docs/theme/404.html
+docs/theme/base.html
+docs/theme/breadcrumbs.html
+docs/theme/css/theme.css
+docs/theme/css/theme_extra.css
+docs/theme/footer.html
+docs/theme/js/jquery-2.1.1.min.js
+docs/theme/js/modernizr-2.8.3.min.js
+docs/theme/js/theme.js
+docs/theme/main.html
+docs/theme/nav.html
+docs/theme/search.html
+docs/theme/searchbox.html
+docs/theme/toc.html
+docs/theme/versions.html
